--- a/News/Presentation/InsightNow/InsightNow.storyboard
+++ b/News/Presentation/InsightNow/InsightNow.storyboard
@@ -16,7 +16,7 @@
             <objects>
                 <viewController storyboardIdentifier="InsightNowViewController" id="Y6W-OH-hqX" customClass="InsightNowViewController" customModule="News" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="1400"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Dd-mF-OaJ">
@@ -63,8 +63,8 @@
                                     <constraint firstAttribute="bottom" secondItem="Qd9-yJ-8GC" secondAttribute="bottom" id="zNm-MG-J1y"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="GKB-HA-8xC">
-                                <rect key="frame" x="0.0" y="176" width="393" height="676"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="GKB-HA-8xC">
+                                <rect key="frame" x="0.0" y="176" width="393" height="1224"/>
                                 <color key="backgroundColor" name="NewsBackground"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="45" id="4L8-yA-j0k">
@@ -162,7 +162,7 @@
                                                                             <constraint firstAttribute="width" secondItem="1Iq-nn-geB" secondAttribute="height" multiplier="1:0.75" id="qXb-qS-8uu"/>
                                                                         </constraints>
                                                                     </imageView>
-                                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo.on.rectangle.angled" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="d31-19-ye4">
+                                                                    <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo.on.rectangle.angled" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="d31-19-ye4">
                                                                         <rect key="frame" x="78" y="38.000000000000014" width="200" height="199.33333333333337"/>
                                                                         <color key="tintColor" systemColor="labelColor"/>
                                                                         <constraints>
@@ -267,15 +267,43 @@
                                             <outlet property="rightButton" destination="G4b-Hy-pJr" id="Ywj-2s-TSL"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="DiscoverTableViewCell" rowHeight="107" id="j7F-aI-HXH" customClass="DiscoverTableViewCell" customModule="News" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="533" width="393" height="107"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="DiscoverTableViewCell" rowHeight="439" id="j7F-aI-HXH" customClass="DiscoverTableViewCell" customModule="News" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="533" width="393" height="439"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="j7F-aI-HXH" id="WR7-Yd-zRA">
-                                            <rect key="frame" x="0.0" y="0.0" width="393" height="107"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="439"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NFM-qH-hp1">
-                                                    <rect key="frame" x="0.0" y="0.0" width="393" height="107"/>
+                                                <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NFM-qH-hp1">
+                                                    <rect key="frame" x="0.0" y="0.0" width="393" height="447"/>
+                                                    <subviews>
+                                                        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="DiscoverTableViewCell" rowHeight="439" id="GEj-mI-BK9" customClass="DiscoverTableViewCell" customModule="News" customModuleProvider="target">
+                                                            <rect key="frame" x="0.0" y="0.0" width="393" height="439"/>
+                                                            <autoresizingMask key="autoresizingMask"/>
+                                                            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="GEj-mI-BK9" id="QmR-mA-Guh">
+                                                                <rect key="frame" x="0.0" y="0.0" width="393" height="439"/>
+                                                                <autoresizingMask key="autoresizingMask"/>
+                                                                <subviews>
+                                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AJD-SR-Yzt">
+                                                                        <rect key="frame" x="0.0" y="0.0" width="393" height="439"/>
+                                                                        <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                                                                        <constraints>
+                                                                            <constraint firstAttribute="height" constant="1200" id="AgQ-qc-tiJ"/>
+                                                                        </constraints>
+                                                                    </view>
+                                                                </subviews>
+                                                                <constraints>
+                                                                    <constraint firstItem="AJD-SR-Yzt" firstAttribute="top" secondItem="QmR-mA-Guh" secondAttribute="top" id="2Lr-HF-Ob0"/>
+                                                                    <constraint firstAttribute="trailing" secondItem="AJD-SR-Yzt" secondAttribute="trailing" id="NkB-o0-G47"/>
+                                                                    <constraint firstItem="AJD-SR-Yzt" firstAttribute="leading" secondItem="QmR-mA-Guh" secondAttribute="leading" id="ZKj-NT-zMx"/>
+                                                                    <constraint firstAttribute="bottom" secondItem="AJD-SR-Yzt" secondAttribute="bottom" id="kDN-lx-jtr"/>
+                                                                </constraints>
+                                                            </tableViewCellContentView>
+                                                            <connections>
+                                                                <outlet property="containerView" destination="AJD-SR-Yzt" id="2Yo-9z-yAH"/>
+                                                            </connections>
+                                                        </tableViewCell>
+                                                    </subviews>
                                                     <color key="backgroundColor" systemColor="systemOrangeColor"/>
                                                 </view>
                                             </subviews>
@@ -288,6 +316,7 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="containerView" destination="NFM-qH-hp1" id="Njz-lb-u8c"/>
+                                            <outlet property="viewHeightConstraint" destination="AgQ-qc-tiJ" id="Xnx-9N-rbA"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -353,6 +382,7 @@
                             <constraint firstItem="tAG-YZ-hwy" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="16" id="uYR-RL-NFS"/>
                         </constraints>
                     </view>
+                    <size key="freeformSize" width="393" height="1400"/>
                     <connections>
                         <outlet property="containerView" destination="xO5-Hx-IM5" id="Fw1-nt-FOJ"/>
                         <outlet property="insightNowTableView" destination="GKB-HA-8xC" id="b1b-Kc-9xY"/>
