--- a/News/Presentation/InsightNow/InsightNow.storyboard
+++ b/News/Presentation/InsightNow/InsightNow.storyboard
@@ -162,7 +162,7 @@
                                                                             <constraint firstAttribute="width" secondItem="1Iq-nn-geB" secondAttribute="height" multiplier="1:0.75" id="qXb-qS-8uu"/>
                                                                         </constraints>
                                                                     </imageView>
-                                                                    <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo.on.rectangle.angled" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="d31-19-ye4">
+                                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo.on.rectangle.angled" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="d31-19-ye4">
                                                                         <rect key="frame" x="78" y="38.000000000000014" width="200" height="199.33333333333337"/>
                                                                         <color key="tintColor" systemColor="labelColor"/>
                                                                         <constraints>
